Version 1.3
===========

* Fix crash if title logo is removed from Textures folder.
* Fix crash if unknown player state ID is encountered.
* Fix bug with OCB 2 on pushables.
* Fix pushables "stop" sound bug.
* Fix pushables camera during edge slips bug.

Version 1.2
===========

* Fix burning torch not working properly if there are more than 256 objects in a level.
* Fix grenade and rocket projectiles smoke offset in certain directions.
* Fix projectiles flying through animating objects.
* Fix harpoon gun doing enormous damage on enemies.
* Fix train death animation.
* Fix various camera issues with unique death animations.
* Fix zipline not following correct trajectory.
* Fix TR1 wolf damage value inflicted on a close bite attack.
* Fix TR1 bear various original AI issues.
* Fix TR2 knife thrower AI.
* Fix TR2 doberman crashing the game when killed by explosive weapons.
* Fix random crashes when killing exploding enemies.
* Fix random crashes in battle with more than 8 enemies.
* Fix volume change in settings not affecting voice track.
* Fix several lighting bugs.
* Fix double drawing additive faces.
* Fix savegame count not properly increasing.
* Fix regeneration of non-ammo pickups with OCB 128.
* Fix vault bug preventing the player from climbing onto ledges out of deeper sections of wade-depth water.
* Fix cold exposure status not recovering in non-cold wade-depth water.
* Fix non-elevated combat camera.
* Fix camera snap when disengaging the look-around mode.
* Fix TR4 mapper not being visible.
* Improve head-on wall collision.
* Overhaul pushables:
 - Separate climbable and non-climbable pushable object slots.
 - Add new pushable OCB to manipulate pushable properties.
 - Add new animations for pushing pushables off edgees (TR1-3 and TR4-5 versions).
 - Fix pushables not working with raising blocks.
 - Fix miscellaneous pushable bugs.
* Overhaul look-around feature:
 - Allow for more consistent and wider viewing angles while crawling, crouching, and hanging.