@@ -622,10 +622,10 @@ enum GAME_OBJECT_ID : short
 	ID_SHOOT_SWITCH3,
 	ID_SHOOT_SWITCH4,
 	ID_AIRLOCK_SWITCH,
-	ID_UNDERWATER_SWITCH1,
-	ID_UNDERWATER_SWITCH2,
-	ID_UNDERWATER_SWITCH3,
-	ID_UNDERWATER_SWITCH4,
+	ID_UNDERWATER_WALL_SWITCH_1,
+	ID_UNDERWATER_WALL_SWITCH_2,
+	ID_UNDERWATER_CEILING_SWITCH_1,
+	ID_UNDERWATER_CEILING_SWITCH_2,
 	ID_TURN_SWITCH,
 	ID_COG_SWITCH,
 	ID_LEVER_SWITCH,
