@@ -623,10 +623,10 @@ The following constants are inside ObjID.
 	SHOOT_SWITCH3
 	SHOOT_SWITCH4
 	AIRLOCK_SWITCH
-	UNDERWATER_SWITCH1
-	UNDERWATER_SWITCH2
-	UNDERWATER_SWITCH3
-	UNDERWATER_SWITCH4
+	ID_UNDERWATER_WALL_SWITCH_1
+	ID_UNDERWATER_WALL_SWITCH_2
+	ID_UNDERWATER_CEILING_SWITCH_1
+	ID_UNDERWATER_CEILING_SWITCH_2
 	TURN_SWITCH
 	COG_SWITCH
 	LEVER_SWITCH
@@ -1796,10 +1796,10 @@ static const std::unordered_map<std::string, GAME_OBJECT_ID> kObjIDs {
 	{ "SHOOT_SWITCH3", ID_SHOOT_SWITCH3 },
 	{ "SHOOT_SWITCH4", ID_SHOOT_SWITCH4 },
 	{ "AIRLOCK_SWITCH", ID_AIRLOCK_SWITCH },
-	{ "UNDERWATER_SWITCH1", ID_UNDERWATER_SWITCH1 },
-	{ "UNDERWATER_SWITCH2", ID_UNDERWATER_SWITCH2 },
-	{ "UNDERWATER_SWITCH3", ID_UNDERWATER_SWITCH3 },
-	{ "UNDERWATER_SWITCH4", ID_UNDERWATER_SWITCH4 },
+	{ "UNDERWATER_WALL_SWITCH_1", ID_UNDERWATER_WALL_SWITCH_1 },
+	{ "UNDERWATER_WALL_SWITCH_2", ID_UNDERWATER_WALL_SWITCH_2 },
+	{ "UNDERWATER_CEILING_SWITCH_1", ID_UNDERWATER_CEILING_SWITCH_1 },
+	{ "UNDERWATER_CEILING_SWITCH_2", ID_UNDERWATER_CEILING_SWITCH_2 },
 	{ "TURN_SWITCH", ID_TURN_SWITCH },
 	{ "COG_SWITCH", ID_COG_SWITCH },
 	{ "LEVER_SWITCH", ID_LEVER_SWITCH },
