@@ -4,8 +4,9 @@ Version 1.3
 * Fix crash if title logo is removed from Textures folder.
 * Fix crash if unknown player state ID is encountered.
 * Fix bug with OCB 2 on pushables.
-* Fix pushables "stop" sound bug.
-* Fix pushables camera during edge slips bug.
+* Fix pushable "stop" sound bug.
+* Fix pushable camera bug during edge slip.
+* Separate underwater wall and ceiling switch objects into two slots each.
 
 Version 1.2
 ===========
